--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
+    <link href="lib/caph/3.1.0/caph.min.css" rel=stylesheet type=text/stylesheet>
+    
+
+    <script src="lib/caph/3.1.0/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="lib/caph/3.1.0/caph-jquery.min.js"></script>
     <script src="js/main.js" defer></script>
 
 
@@ -20,17 +25,17 @@
     <nav class="navbar">
         <img src="assets/img/TeluniveTV.svg" class="brand-logo" alt="">
         <ul class="nav-links">
-            <li class="nav-items"><a href="#">Argentina</a></li>
-            <li class="nav-items"><a href="#">Deportes</a></li>
-            <li class="nav-items"><a href="#">Infantiles</a></li>
-            <li class="nav-items"><a href="#">Canales Premium</a></li>
-            <li class="nav-items"><a href="#">Culturales</a></li>
-            <li class="nav-items"><a href="#">Cine</a></li>
+            <li focusable class="nav-items"><a href="#">Argentina</a></li>
+            <li focusable class="nav-items"><a href="#">Deportes</a></li>
+            <li focusable class="nav-items"><a href="#">Infantiles</a></li>
+            <li focusable class="nav-items"><a href="#">Canales Premium</a></li>
+            <li focusable class="nav-items"><a href="#">Culturales</a></li>
+            <li focusable class="nav-items"><a href="#">Cine</a></li>
         </ul>
 
         <div class="right-container">
-            <input type="text" class="search-box" placeholder="Buscar">
-            <button class="sub-btn">Registrarse</button>
+            <input focusable type="text" class="search-box" placeholder="Buscar">
+            <button focusable class="sub-btn">Registrarse</button>
             <a class="login-link" href="#">Ingresar</a>
         </div>
 
@@ -45,31 +50,47 @@
     </div>
 
     <div class="video-card-container">
-        <div class="video-card">
+        <div focusable class="video-card">
             <img src="assets/img/disney.PNG" class="video-card-image" alt="">
             <video src="assets/videos/disney.mp4" muted loop class="card-video"></video>
         </div>
 
-        <div class="video-card">
+        <div focusable class="video-card">
             <img src="assets/img/pixar.PNG" class="video-card-image" alt="">
             <video src="assets/videos/pixar.mp4" muted loop class="card-video"></video>
         </div>
 
-        <div class="video-card">
+        <div focusable class="video-card">
             <img src="assets/img/marvel.PNG" class="video-card-image" alt="">
             <video src="assets/videos/marvel.mp4" muted loop class="card-video"></video>
         </div>
 
-        <div class="video-card">
+        <div focusable class="video-card">
             <img src="assets/img/star-wars.PNG" class="video-card-image" alt="">
             <video src="assets/videos/star-war.mp4" muted loop class="card-video"></video>
         </div>
 
-        <div class="video-card">
+        <div focusable class="video-card">
             <img src="assets/img/geographic.PNG" class="video-card-image" alt="">
             <video src="assets/videos/geographic.mp4" muted loop class="card-video"></video>
         </div>
     </div>
+
+    <div class="title">Mis Canales</div>
+
+    <div class="channel-list">
+        <div class="card-container">
+            <div focusable class="card">
+                <img src="assets/img/poster 1.png" class="card-img" alt="">
+                <div class="card-body">
+                    <h2 class="name">Channel Name</h2>
+                    <h6 class="des">Description of description</h6>
+                    <button class="watchlist-btn">ver</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
     <script src="js/test_data.js"></script>
